--- a/frontend/src/main/frontend/src/app/main/usuario/dialogs/usuario/usuario-dialog.html
+++ b/frontend/src/main/frontend/src/app/main/usuario/dialogs/usuario/usuario-dialog.html
@@ -1,7 +1,7 @@
 <!-- DIALOG -->
-<md-dialog class="contact-dialog">
+<md-dialog class="usuario-dialog">
 
-  <form name="contactForm" class="md-inline-form" novalidate>
+  <form name="usuarioForm" class="md-inline-form" novalidate>
 
     <!-- DIALOG TOOLBAR -->
     <!-- <md-toolbar class="md-accent" layout="column"> -->
@@ -18,9 +18,9 @@
     <!-- TOOLBAR MIDDLE -->
     <!-- <div class="md-toolbar-tools md-toolbar-tools-middle" flex layout="column" layout-align="center center">
                 <div layout="column" layout-align="center center">
-                    <img ng-src="{{vm.contact.avatar}}" class="md-avatar avatar contact-avatar huge"
-                         alt="{{vm.contact.name}}"/>
-                    <div class="contact-name">{{vm.contact.nome}}</div>
+                    <img ng-src="{{vm.usuario.avatar}}" class="md-avatar avatar usuario-avatar huge"
+                         alt="{{vm.usuario.name}}"/>
+                    <div class="usuario-name">{{vm.usuario.nome}}</div>
                 </div>
             </div> -->
     <!-- / TOOLBAR MIDDLE -->
@@ -31,12 +31,12 @@
                 <div flex layout="row" layout-align="center center">
 
                     <md-button class="md-icon-button"
-                               ng-click="vm.toggleInArray(vm.contact.id, vm.user.starred)"
+                               ng-click="vm.toggleInArray(vm.usuario.id, vm.user.starred)"
                                aria-label="Toggle starred" translate
                                translate-attr-aria-label="CONTACTS.TOGGLE_STARRED">
-                        <md-icon ng-if="vm.exists(vm.contact.id,vm.user.starred)" md-font-icon="icon-star"
+                        <md-icon ng-if="vm.exists(vm.usuario.id,vm.user.starred)" md-font-icon="icon-star"
                                  class="amber-fg"></md-icon>
-                        <md-icon ng-if="!vm.exists(vm.contact.id,vm.user.starred)"
+                        <md-icon ng-if="!vm.exists(vm.usuario.id,vm.user.starred)"
                                  md-font-icon="icon-star-outline"></md-icon>
                     </md-button>
 
@@ -48,9 +48,9 @@
 
                         <md-menu-content width="3">
                             <md-list-item ng-if="vm.user.groups" ng-repeat="group in vm.user.groups"
-                                          ng-click="vm.toggleInArray(vm.contact.id,group.contactIds)">
+                                          ng-click="vm.toggleInArray(vm.usuario.id,group.usuarioIds)">
                                 <p class="pl-8"
-                                   ng-style="vm.exists(vm.contact.id,group.contactIds) && {'font-weight':'500'}">
+                                   ng-style="vm.exists(vm.usuario.id,group.usuarioIds) && {'font-weight':'500'}">
                                     {{group.name}}
                                 </p>
                             </md-list-item>
@@ -70,25 +70,25 @@
       <md-input-container class="md-icon-float md-block">
         <label>Nome</label>
         <md-icon md-font-icon="icon-account" class="name"></md-icon>
-        <input ng-model="vm.contact.nome" type="text" ng-disabled="!vm.newContact" md-maxlength="80" required md-autofocus>
+        <input ng-model="vm.usuario.nome" type="text" ng-disabled="!vm.newUsuario" md-maxlength="80" required md-autofocus>
       </md-input-container>
 
       <md-input-container class="md-icon-float md-block">
         <label>Senha</label>
         <md-icon md-font-icon="icon-key"></md-icon>
-        <input ng-model="vm.contact.senha" type="password" required>
+        <input ng-model="vm.usuario.senha" type="password" required>
       </md-input-container>
 
       <md-input-container class="md-icon-float md-block">
         <label>E-mail</label>
         <md-icon md-font-icon="icon-email"></md-icon>
-        <input ng-model="vm.contact.email" type="email">
+        <input ng-model="vm.usuario.email" type="email">
       </md-input-container>
 
       <md-input-container class="md-icon-float md-block">
        <label>Setor</label>
        <md-icon md-font-icon="icon-format-list-bulleted"></md-icon>
-       <md-select ng-model="vm.contact.setor">
+       <md-select ng-model="vm.usuario.setor">
          <md-option ng-value="fp" ng-repeat="fp in vm.listaSetores">
            {{fp}}
          </md-option>
@@ -98,7 +98,7 @@
       <md-icon md-font-icon="icon-cog-box"></md-icon>
       <label>Ativo?</label>
       <md-input-container class="md-icon-float md-block">
-        <md-radio-group ng-model="vm.contact.ativo" required>
+        <md-radio-group ng-model="vm.usuario.ativo" required>
           <md-radio-button ng-value="true">Sim</md-radio-button></br>
           <md-radio-button ng-value="false">Não</md-radio-button>
         </md-radio-group>
@@ -108,22 +108,22 @@
 
       <!-- Este input só aparece se "Cartão" for selecionado no [md-select] acima: -->
       <!--
-      <md-input-container class="md-icon-float md-block" ng-if="vm.contact.formaPgto == 'Cartão'">
+      <md-input-container class="md-icon-float md-block" ng-if="vm.usuario.formaPgto == 'Cartão'">
         <label>Número do Cartão (somente números)</label>
         <md-icon md-font-icon="icon-credit-card"></md-icon>
-        <input ng-model="vm.contact.cartao.numero" type="number" md-maxlength="16">
+        <input ng-model="vm.usuario.cartao.numero" type="number" md-maxlength="16">
       </md-input-container>
 
       <md-input-container class="md-icon-float md-block">
         <label>Valor Mensal (em reais)</label>
         <md-icon md-font-icon="icon-currency-usd"></md-icon>
-        <input ng-model="vm.contact.valorAtual" type="number" min="0" step="0.01" pattern="[0-9]{1,10}[.]{0,1}[0-9]{0,2}" required>
+        <input ng-model="vm.usuario.valorAtual" type="number" min="0" step="0.01" pattern="[0-9]{1,10}[.]{0,1}[0-9]{0,2}" required>
       </md-input-container>
 
       <md-input-container class="md-icon-float md-block">
         <label>Vencimento</label>
         <md-icon md-font-icon="icon-calendar-select"></md-icon>
-        <input ng-model="vm.contact.vencAtual" type="number" min="1" max="28" required>
+        <input ng-model="vm.usuario.vencAtual" type="number" min="1" max="28" required>
         <div class="hint" ng-if="showHints">Dia de vencimento, de 1 até 28.</div>
       </md-input-container>
     -->
@@ -136,36 +136,36 @@
       <!-- <div ng-if="vm.allFields"> -->
       <!-- <md-input-container class="md-block">
                     <md-icon md-font-icon="icon-phone"></md-icon>
-                    <input ng-model="vm.contact.phone" type="text" placeholder="Phone number" translate
+                    <input ng-model="vm.usuario.phone" type="text" placeholder="Phone number" translate
                            translate-attr-placeholder="CONTACTS.PHONE_NUMBER">
                 </md-input-container>
 
                 <md-input-container class="md-block">
                     <md-icon md-font-icon="icon-email" class="email"></md-icon>
-                    <input ng-model="vm.contact.email" type="email" placeholder="Email" translate
+                    <input ng-model="vm.usuario.email" type="email" placeholder="Email" translate
                            translate-attr-placeholder="CONTACTS.EMAIL">
                 </md-input-container>
 
 
                 <md-input-container class="md-block">
                     <md-icon md-font-icon="icon-domain"></md-icon>
-                    <input ng-model="vm.contact.company" type="text" placeholder="Company" translate
+                    <input ng-model="vm.usuario.company" type="text" placeholder="Company" translate
                            translate-attr-placeholder="CONTACTS.COMPANY">
                 </md-input-container>
 
                 <md-input-container class="md-block">
                     <md-icon md-font-icon="icon-worker"></md-icon>
-                    <input ng-model="vm.contact.jobTitle" type="text" placeholder="Job title" translate
+                    <input ng-model="vm.usuario.jobTitle" type="text" placeholder="Job title" translate
                            translate-attr-placeholder="CONTACTS.JOB_TITLE">
                 </md-input-container>
 
-                <md-datepicker class="birthday-input" ng-model="vm.contact.birthday" md-placeholder="Birthday"
+                <md-datepicker class="birthday-input" ng-model="vm.usuario.birthday" md-placeholder="Birthday"
                                ng-required="false">
                 </md-datepicker>
 
                 <md-input-container class="md-block">
                     <md-icon md-font-icon="icon-home"></md-icon>
-                    <input ng-model="vm.contact.address" type="text" placeholder="Address" translate
+                    <input ng-model="vm.usuario.address" type="text" placeholder="Address" translate
                            translate-attr-placeholder="CONTACTS.ADDRESS">
                 </md-input-container>
 
@@ -173,7 +173,7 @@
                     <md-icon md-font-icon="icon-note"></md-icon>
                     <md-input-container flex>
                         <label translate translate-attr-placeholder="CONTACTS.NOTES">Notes</label>
-                        <textarea ng-model="vm.contact.notes" type="text" max-rows="4"></textarea>
+                        <textarea ng-model="vm.usuario.notes" type="text" max-rows="4"></textarea>
                     </md-input-container>
                 </div>
 
@@ -191,18 +191,18 @@
     <!-- DIALOG ACTIONS -->
     <md-dialog-actions layout="row" layout-align="space-between center">
       <div layout="row" layout-align="start center">
-        <md-button type="submit" ng-if="!vm.newContact" ng-click="vm.saveContact()" class="send-button md-accent md-raised" ng-disabled="contactForm.$invalid || contactForm.$pristine" aria-label="Salvar">
+        <md-button type="submit" ng-if="!vm.newUsuario" ng-click="vm.saveUsuario()" class="send-button md-accent md-raised" ng-disabled="usuarioForm.$invalid || usuarioForm.$pristine" aria-label="Salvar">
           Salvar
         </md-button>
 
-        <md-button type="submit" ng-if="vm.newContact" ng-click="vm.addNewContact()" class="send-button md-accent md-raised" ng-disabled="contactForm.$invalid || contactForm.$pristine" aria-label="Adicionar usuário">
+        <md-button type="submit" ng-if="vm.newUsuario" ng-click="vm.addNewUsuario()" class="send-button md-accent md-raised" ng-disabled="usuarioForm.$invalid || usuarioForm.$pristine" aria-label="Adicionar usuário">
           Adicionar Usuário
         </md-button>
 
       </div>
 
-      <div ng-if="!vm.newContact" layout="row">
-        <md-button class="md-icon-button" ng-click="vm.deleteContactConfirm($event)" aria-label="Apagar">
+      <div ng-if="!vm.newUsuario" layout="row">
+        <md-button class="md-icon-button" ng-click="vm.deleteUsuarioConfirm($event)" aria-label="Apagar">
           <md-icon md-font-icon="icon-delete"></md-icon>
           <md-tooltip><span>Apagar</span></md-tooltip>
         </md-button>
