--- a/frontend/src/main/frontend/src/app/main/aluno/aluno.scss
+++ b/frontend/src/main/frontend/src/app/main/aluno/aluno.scss
@@ -1,13 +1,13 @@
-#maintenance {
+#aluno {
     height: 100%;
     background: url('/assets/images/backgrounds/march.jpg') no-repeat;
     background-size: cover;
 
-    #maintenance-form-wrapper {
+    #aluno-form-wrapper {
         flex: 1 0 auto;
         padding: 32px;
 
-        #maintenance-form {
+        #aluno-form {
             max-width: 384px;
             padding: 32px;
             background: #FFFFFF;
@@ -42,12 +42,12 @@
 // RESPONSIVE
 @media screen and (max-width: $layout-breakpoint-xs) {
 
-    #maintenance {
+    #aluno {
 
-        #maintenance-form-wrapper {
+        #aluno-form-wrapper {
             padding: 16px;
 
-            #maintenance-form {
+            #aluno-form {
                 padding: 24px;
                 width: 100%;
             }
