fix camiseta and calca layout

--- a/frontend/src/main/frontend/src/app/main/aluno/aluno.html
+++ b/frontend/src/main/frontend/src/app/main/aluno/aluno.html
@@ -279,7 +279,7 @@
                         <span class="ms-form-wizard-step-number md-accent-bg" ng-if="wizardStep4.$valid">
                             <i class="icon-check s16"></i>
                         </span>
-                        <span class="ms-form-wizard-step-text">Aguardando Normalização</span>
+                        <span class="ms-form-wizard-step-text">Aguardando Normalização das Tabelas</span>
                     </span>
                 </md-tab-label>
                 <md-tab-body>
